--- a/packages/pwa-buildpack/package.json
+++ b/packages/pwa-buildpack/package.json
@@ -39,11 +39,13 @@
     "apicache": "~1.4.0",
     "babel-loader": "~8.0.5",
     "boxen": "~3.0.0",
+    "camelspace": "^1.0.0",
     "chalk": "~2.4.2",
     "debug": "~4.1.1",
     "debug-error-middleware": "~1.3.0",
     "devcert": "~1.0.0",
     "dotenv": "~6.2.0",
+    "envalid": "~4.2.2",
     "execa": "~1.0.0",
     "express": "~4.16.4",
     "graphql-playground-middleware-express": "~1.7.12",
@@ -52,8 +54,10 @@
     "portscanner": "~2.2.0",
     "readdir-enhanced": "~2.2.4",
     "redis": "~2.8.0",
+    "terser-webpack-plugin": "~1.2.3",
     "virtual-module-webpack-plugin": "~0.4.1",
     "webpack": "~4.29.5",
+    "webpack-assets-manifest": "~3.1.1",
     "webpack-sources": "~1.3.0",
     "workbox-webpack-plugin": "~4.2.0",
     "write-file-webpack-plugin": "~4.5.0"
