--- a/packages/pwa-buildpack/package.json
+++ b/packages/pwa-buildpack/package.json
@@ -6,6 +6,9 @@
   },
   "description": "Build/Layout optimization tooling and Peregrine framework adapters for the Magento PWA",
   "main": "dist/index.js",
+  "bin": {
+    "buildpack": "./bin/buildpack"
+  },
   "scripts": {
     "build": "babel src --out-dir dist --root-mode 'root' --source-maps --copy-files",
     "build:dev": "yarn run build",
@@ -48,6 +51,7 @@
     "envalid": "~4.2.2",
     "execa": "~1.0.0",
     "express": "~4.16.4",
+    "figures": "^2.0.0",
     "graphql-playground-middleware-express": "~1.7.12",
     "lodash": "~4.17.11",
     "node-fetch": "~2.3.0",
@@ -59,8 +63,10 @@
     "webpack": "~4.29.5",
     "webpack-assets-manifest": "~3.1.1",
     "webpack-sources": "~1.3.0",
+    "word-wrap": "^1.2.3",
     "workbox-webpack-plugin": "~4.2.0",
-    "write-file-webpack-plugin": "~4.5.0"
+    "write-file-webpack-plugin": "~4.5.0",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "@babel/cli": "~7.2.3",
