--- a/packages/pwa-buildpack/package.json
+++ b/packages/pwa-buildpack/package.json
@@ -38,7 +38,6 @@
     "@magento/directive-parser": "~0.1.6",
     "@magento/express-sharp": "~2.1.1-newdeps.1",
     "@magento/upward-js": "~2.1.0",
-    "ajv": "~6.9.2",
     "apicache": "~1.4.0",
     "babel-loader": "~8.0.5",
     "boxen": "~3.0.0",
@@ -60,7 +59,6 @@
     "redis": "~2.8.0",
     "terser-webpack-plugin": "~1.2.3",
     "virtual-module-webpack-plugin": "~0.4.1",
-    "webpack": "~4.29.5",
     "webpack-assets-manifest": "~3.1.1",
     "webpack-sources": "~1.3.0",
     "word-wrap": "^1.2.3",
@@ -76,7 +74,10 @@
     "rimraf": "~2.6.3",
     "sharp": "~0.21.2",
     "strip-ansi": "~5.0.0",
-    "terser-webpack-plugin": "~1.2.3"
+    "webpack": "~4.29.5"
+  },
+  "peerDependencies": {
+    "webpack": "^4.29.5"
   },
   "engines": {
     "node": ">=10.7.0",
